fix(components): wrap title of FeaturedPost in Link

--- a/src/components/shared/featured-post/featured-post.module.scss
+++ b/src/components/shared/featured-post/featured-post.module.scss
@@ -64,6 +64,10 @@
   margin-top: 5px;
 }
 
+.title-wrapper {
+  text-decoration: none;
+}
+
 .title {
   margin-bottom: 15px;
 
